--- a/client/package.json
+++ b/client/package.json
@@ -8,14 +8,24 @@
     "start": "next start",
     "lint": "next lint"
   },
+  "overrides": {
+    "motion": {
+      "react": "^19.0.0",
+      "react-dom": "^19.0.0"
+    }
+  },
   "dependencies": {
     "@sentry/nextjs": "^9.10.1",
+    "@tabler/icons-react": "^3.31.0",
+    "@tailwindcss/cli": "^4.1.1",
     "@tailwindcss/postcss": "^4.1.1",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.6.3",
     "lucide-react": "^0.487.0",
+    "motion": "^12.6.3",
     "next": "15.2.4",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
