--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,9 @@
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/cli": "^4.1.1",
     "@tailwindcss/postcss": "^4.1.1",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
