--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@sentry/nextjs": "^9.10.1",
+    "@studio-freight/react-lenis": "^0.0.47",
     "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/cli": "^4.1.1",
     "@tailwindcss/postcss": "^4.1.1",
